Update and rename cave light.html to cave_light.html

--- a/cave_light.html
+++ b/cave_light.html
@@ -12,7 +12,7 @@
 	
     <script type="text/javascript">
         var server = 'test.mosquitto.org';
-        var topics = {viky,;
+        var topics = {viky};
         var wsUriC = "ws://"+server+":8080/mqtt";
 		var ws;
 		
